<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <VideoView
        android:id="@+id/videoView"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--Titulo Video-->
    <TextView
        android:id="@+id/tv_TituloVideo"
        android:text="@string/tv_TituloVideo"
        android:layout_marginStart="10dp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_above="@+id/tv_AutorVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--Autor Video-->
    <TextView
        android:id="@+id/tv_AutorVideo"
        android:text="@string/tv_AutorVideo"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:shadowDy="1"
        android:shadowDx="1"
        android:shadowRadius="2"
        android:layout_above="@id/tv_FechaSubida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--Fecha Video-->
    <TextView
        android:id="@+id/tv_FechaSubida"
        android:text="@string/tv_FechaSubida"
        android:layout_marginStart="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:shadowRadius="2"
        android:shadowDx="1"
        android:shadowDy="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>